--- a/blogicum/templates/registration/registration_form.html
+++ b/blogicum/templates/registration/registration_form.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load django_bootstrap5 %}
 {% block content %}
-  <div class="col d-flex justify-content-center mt-5">
+  <div class="col d-flex justify-content-center">
     <div class="card" style="width: 40rem;">
-      <div class="card-header text-center">
+      <div class="card-header">
         Регистрация пользователя
       </div>
       <div class="card-body">
