--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,19 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Публикации в категории {{ category.title }}{% endblock %}
-
 {% block content %}
-  <div class="category-header">
-    <h1 class="category-name">{{ category.title }}</h1>
-    <p>{{ category.description }}</p>
-  </div>
-
-  <div class="posts-grid">
-    {% for post in page_obj %}
-      <article>
-        {% include "includes/post_card.html" %}
-      </article>
-    {% endfor %}
-  </div>
-
+  <h1 class="text-center">Публикации в категории - {{ category.title }}</h1>
+  <p class="col-6 offset-3 mb-5 lead text-center">{{ category.description }}</p>
+  {% for post in page_obj %}
+    <article class="mb-5">
+      {% include "includes/post_card.html" %}
+    </article>
+  {% endfor %}
   {% include "includes/paginator.html" %}
 {% endblock %}
