--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,32 +1,47 @@
 {% load static %}
 {% with request.resolver_match.view_name as view_name %}
 <header>
-  <nav class="nav" style="background-color: lightskyblue; padding: 0.5rem 1rem;">
-    <div class="container d-flex align-items-center justify-content-between">
-      <a class="nav-link" href="{% url 'blog:index' %}" style="display: flex; align-items: center; gap: 0.5rem;">
-        <img src="{% static 'img/logo.png' %}" width="30" height="30" alt="Логотип Блогикум" style="border-radius: 4px;">
-        <span style="font-weight: 600; color: var(--black);">Блогикум</span>
+  <nav class="navbar navbar-light" style="background-color: lightskyblue">
+    <div class="container">
+      <a class="navbar-brand" href="{% url 'blog:index' %}">
+        <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+        Блогикум
       </a>
-
-      <ul class="nav">
-        <li class="nav-item">
-          <a href="{% url 'pages:about' %}" class="nav-link {% if view_name == 'pages:about' %}active{% endif %}">О проекте</a>
-        </li>
-        <li class="nav-item">
-          <a href="{% url 'pages:rules' %}" class="nav-link {% if view_name == 'pages:rules' %}active{% endif %}">Правила</a>
-        </li>
-      </ul>
-
-      <div class="btn-group">
-        {% if user.is_authenticated %}
-          <a href="{% url 'blog:create_post' %}" class="nav-link btn btn-outline">Написать пост</a>
-          <a href="{% url 'blog:profile' user.username %}" class="nav-link btn btn-outline">{{ user.username }}</a>
-          <a href="{% url 'logout' %}" class="nav-link btn btn-outline">Выйти</a>
-        {% else %}
-          <a href="{% url 'login' %}" class="nav-link btn btn-outline">Войти</a>
-          <a href="{% url 'registration' %}" class="nav-link btn btn-outline">Регистрация</a>
-        {% endif %}
-      </div>
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a
+              class="nav-link {% if view_name == 'pages:about' %}text-white{% endif %}"
+              href="{% url 'pages:about' %}"
+            >
+              О проекте
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link {% if view_name == 'pages:rules' %}text-white{% endif %}"
+              href="{% url 'pages:rules' %}"
+            >
+              Правила
+            </a>
+          </li>
+          {% if user.is_authenticated %}
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'blog:create_post' %}">Написать пост</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'blog:profile' user.username %}">{{ user.username }}</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'logout' %}">Выйти</a></button>
+            </div>
+          {% else %}
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'login' %}">Войти</a></button>
+              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
+                  href="{% url 'registration' %}">Регистрация</a></button>
+            </div>
+          {% endif %}
+        </ul>
     </div>
   </nav>
 </header>
