--- a/blogicum/templates/includes/paginator.html
+++ b/blogicum/templates/includes/paginator.html
@@ -1,15 +1,13 @@
 {% if page_obj.has_other_pages %}
-  <nav aria-label="Навигация по страницам" class="pagination-wrapper my-5">
-    <ul class="pagination justify-center">
+  <nav aria-label="Page navigation" class="my-5">
+    <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page=1">Первая</a></li>
         <li class="page-item">
-          <a class="page-link" href="?page=1">Первая</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">‹‹</a>
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+            << </a>
         </li>
       {% endif %}
-
       {% for i in page_obj.paginator.page_range %}
         {% if page_obj.number == i %}
           <li class="page-item active">
@@ -21,13 +19,16 @@
           </li>
         {% endif %}
       {% endfor %}
-
       {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">››</a>
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+            >>
+          </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Последняя</a>
+          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+            Последняя
+          </a>
         </li>
       {% endif %}
     </ul>
