--- a/blogicum/templates/pages/404.html
+++ b/blogicum/templates/pages/404.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Страница не найдена{% endblock %}
 {% block content %}
-  <div class="text-center my-5">
-    <h1 class="display-4 text-warning">Страница не найдена</h1>
-    <p class="lead">Страницы с адресом <code>{{ request.build_absolute_uri }}</code> не существует!</p>
-    <a href="{% url 'blog:index' %}" class="btn btn-primary mt-3">Вернуться на главную</a>
-  </div>
+  <h1>Страница не найдена</h1>
+  <p>Страницы с адресом {{ request.build_absolute_uri }} не существует!</p>
+  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
 {% endblock %}
