--- a/blogicum/templates/pages/500.html
+++ b/blogicum/templates/pages/500.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Ошибка сервера{% endblock %}
 {% block content %}
-  <div class="text-center my-5">
-    <h1 class="display-4 text-danger">Ошибка сервера</h1>
-    <p class="lead">На сервере что-то пошло не так!</p>
-    <a href="{% url 'blog:index' %}" class="btn btn-primary mt-3">Вернуться на главную</a>
-  </div>
+  <h1>Ошибка сервера</h1>
+  <p>На сервере что-то пошло не так!</p>
+  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
 {% endblock %}
