--- a/blogicum/templates/registration/login.html
+++ b/blogicum/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% if next %}
     {% if user.is_authenticated %}
-      <p class="text-center text-danger">
+      <p class="text-center">
         У вашего аккаунта нет доступа к этой странице.
         Чтобы продолжить, войдите в систему с аккаунтом,
         у которого есть доступ.
@@ -27,13 +27,8 @@
           <input type="hidden" name="next" value="{{ next }}">
           {% bootstrap_button button_type="submit" content="Войти" %}
         </form>
-        {% if form.errors %}
-          <div class="alert alert-danger mt-3" role="alert">
-            Пожалуйста, исправьте ошибки в форме.
-          </div>
-        {% endif %}
-        <div class="mt-3">
-          <a href="{% url 'password_reset' %}" class="btn btn-link p-0">Забыли пароль?</a>
+        <div>
+          <a href="{% url 'password_reset' %}">Забыли пароль?</a>
         </div>
       </div>
     </div>
