--- a/blogicum/templates/registration/password_change_form.html
+++ b/blogicum/templates/registration/password_change_form.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% load django_bootstrap5 %}
 {% block content %}
-  <div class="d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+  <div class="col d-flex justify-content-center">
     <div class="card col-4 m-3">
       <div class="card-header">
         Поменять пароль
       </div>
       <div class="card-body">
-        <p class="text-muted small mb-3">Пароль должен содержать минимум 8 символов.</p>
-        <form method="post" novalidate>
+        <form method="post">
           {% csrf_token %}
           {% bootstrap_form form %}
           {% bootstrap_button button_type="submit" content="Поменять пароль" %}
