--- a/blogicum/templates/registration/password_reset_form.html
+++ b/blogicum/templates/registration/password_reset_form.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load django_bootstrap5 %}
 {% block content %}
-  <div class="col d-flex justify-content-center mt-5">
+  <div class="col d-flex justify-content-center">
     <div class="card col-4 m-3">
-      <div class="card-header text-center">
+      <div class="card-header">
         Отправить письмо для сброса пароля
       </div>
       <div class="card-body">
